Fix wrong margin on UL. Made lables clickablewith ability to check the checkbox on click.

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ background-color: #3B3E47;
 	width: 100%;
 	background-color: #4A4F56;	
 	text-align:center;
-	color: 	#A86D77;
+	color: 	#D0878F;
 	
 	
 }
@@ -29,13 +29,16 @@ background-color: #3B3E47;
 #footer {
 	background-color: #4A4F56;
 	text-align:center;
-	color: 	#A86D77;
+	color: 	#D0878F;
 	padding: 5px;
+	position: relative;
+	font-size:1.5em;
 		
 }
 
 ul {
 	list-style-type:none;
+	
 		
 }
 
@@ -43,6 +46,7 @@ li {
 	padding-top:8px;
 	padding-bottom:8px;
 	padding-left: 5px;
+	margin-left: -40px;
 	
 }
 
@@ -82,7 +86,8 @@ li:hover {
 	border-top-style:solid;
 }
 
-input:checked + label {
+input:checked + label{
 	text-decoration: line-through;
 	color: #9792B0;
 }
+
